--- a/week03/assignment01.html
+++ b/week03/assignment01.html
@@ -9,6 +9,8 @@
 <hr>
 <p>Im a student in 11th grade at The James Madison Highschool, Im 17 years old and my birthday is in September 21.</p>
 
+  <h2>My classes</h2>  
+  
 <ol>
   <li>WEb Design I</li>
   <li>Powerpoint</li>
@@ -19,6 +21,16 @@
   <li>English 3</li>
   <li>Government</li>
 </ol>
+  
+  
+  <ul>
+   <li> i enjoy doing Makeup.</li>
+   <li>I like to do hair.</li>
+   <li>I love to take care of my nephews.</li>
+   <li>I like to take pictures.</li>
+   <li>I like to go shooping. </li>
+   <li>I love spending time with my family. </li>
+  </ul>
 
 </body>
 </html>
