--- a/week03/assignment02.html
+++ b/week03/assignment02.html
@@ -23,7 +23,7 @@
 </main>
 
 <footer>
-      <p><strong>Emely Guerrero</strong>, Feb. 06, 2019 -- This is a website for IMED-1416 at El Centro College</p>
+      <p><strong>Emely Guerrero</strong>, Feb. 06, 2019 -- This is a website for <em>IMED-1416</em> at El Centro College</p>
 </footer>
 
 </body>
