--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+  
+<header>
+  <img src="banner.jpg" alt="Emely's Page" height="90" width="728">
+  </header>
+  
+<h1>Emely Guerrero</h1>
+<p>IMED-1416.</p>
 
 </body>
 </html>
