--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 <h1>Emely Guerrero</h1>
 <p>IMED-1416.</p>
 
+ <footer> 
+   <p>This is a page produced for IMED-1416, El Centro College &copy; Emely Guerrero</p>
+  </footer>
+   
 </body>
 </html>
