--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <title>Page Title</title>
 </head>
 <body>
-
   
 <header>
   <img src="banner.jpg" alt="Emely's Page" height="90" width="728">
@@ -13,6 +12,16 @@
 <h1>Emely Guerrero</h1>
 <p>IMED-1416.</p>
 
+ <hr> 
+  
+  <h2>Assignments</h2>  
+  
+ <ol> 
+   <li><a href = "/week03/assignment01.html">Assignment 01</a></li>
+   <li><a href = "/week03/assignment02.html">Assignment 02</a></li>
+   <li><a href = "/week04/assignment03.html">Assignment 03</a></li>
+  </ol>
+  
  <footer>
    <hr>
    <p>This is a page produced for IMED-1416, El Centro College &copy;2019 Emely Guerrero</p>
