--- a/arbor/recipe.html
+++ b/arbor/recipe.html
@@ -32,7 +32,7 @@
 <li>1 lemon, halved</li>
       
                </ul>
-               <h2>Instructions</h2>:
+               <h2>Instructions:</h2>
 <ol>
    <li>Heat pan with olive oil. Sear chicken.</li>
    <li>Add garlic, lemon and consome to pan.</li>
