--- a/arbor/arbor.html
+++ b/arbor/arbor.html
@@ -2,10 +2,13 @@
 <html>
    <head>
       <title>Arbor Cafe - Home</title>
-   </head>
+   
+      <link rel="stylesheet" type="text/css" href="styles/arbor.css" />
+   
+     </head>
    <body>
       <header>
-         <h1><a name="top">Arbor Cafe</a></h1>
+        <img src='arborlogo.jpg" alt="Arbor Cafe' height="100" width="760">
       </header>
       <nav>
         <ul>
@@ -33,7 +36,7 @@
             </article>
          </section>
          <aside>
-             <img src="cafe.jpg" alt="Arbor Cafe" height="100" width="100">
+             <img src="arbor.jpg" alt="Arbor Cafe" height="100" width="100">
          </aside>
          
          <p>We are located on the northeast shore of White Rock Lake, offering a panoramic view of Downtown Dallas.</p> 
