--- a/arbor/specials.html
+++ b/arbor/specials.html
@@ -87,7 +87,7 @@
             </article>
          </section>
          <aside>
-             <img src="cafe.jpg" alt="Arbor Cafe" height="100" width="100">
+             <img src="arbor.jpg" alt="Arbor Cafe" height="250" width="250">
          </aside>
          
       </main>
