--- a/arbor/recipe.html
+++ b/arbor/recipe.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Arbor Cafe - Recipe</title>
-   </head>
+      <title>Arbor Cafe - Recipeof the Month</title>
+   
+      <link rel="stylesheet" type="text/css" href="styles/arbor.css" />
+   
+     </head>
    <body>
       <header>
-         <h1><a name="top">Arbor Cafe</a></h1>
+        <img src="arborlogo.jpg" alt="Arbor Cafe" height="100" width="760">
       </header>
       <nav>
         <ul>
