--- a/arbor/specials.html
+++ b/arbor/specials.html
@@ -94,7 +94,7 @@
          </aside>
          
       </main>
-      <footer>
+      <footer id="footer">
          <hr>
          <p><em>5555 White Rock Lake Drive<br>
             Dallas TX 75238<br>
