--- a/arbor/arbor.html
+++ b/arbor/arbor.html
@@ -36,7 +36,7 @@
             
             </article>
          </section>
-         <aside>
+         <aside class="right">
              <img src="arbor.jpg" alt="Arbor Cafe" height="250" width="250">
          </aside>
          
