--- a/arbor/recipe.html
+++ b/arbor/recipe.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
            <li><a href="/arbor/arbor.html">Home</a></li>
-           <li><a href="/arbor/special.html">Specials</a></li>
+           <li><a href="/arbor/specials.html">Specials</a></li>
            <li><a href="/arbor/recipe.html">Classic Recipe of the Month</a></li>
         </ul>
       </nav>
