--- a/final/products&services.html
+++ b/final/products&services.html
@@ -12,9 +12,9 @@
       </header>
       <nav>
         <ul>
-           <li><a href="/arbor/arbor.html">Home</a></li>
-           <li><a href="/arbor/product and services.html">Product and Services</a></li>
-           <li><a href="/arbor/recipe.html">Classic Recipe of the Month</a></li>
+           <li><a href="/final/arbor.html">Home</a></li>
+           <li><a href="/final/product and services.html">Product and Services</a></li>
+           <li><a href="/final/contactus.html">Contact Us</a></li>
         </ul>
       </nav>
       <main>
@@ -26,22 +26,24 @@
 <table style="width:80%">
   <tr>
     <th>All Day, Everyday</th> 
-    <th>Dinner</th>
   </tr>
   <tr>
-    <td>Cloud Nine $6.95each slide-$20.00 whole pie<br>
-    A heavenly trifecta of house made with caramel, rich and creamy 
+    <td>Cloud Nine $4.50each slide-$20.00 whole pie<br>
+    A heavenly trifecta of house made with caramel, rich and creamy<br> 
     butterscotch custard and brown-sugar meringue toasted like a marshmallow</td>
-    <td>Chicken Wrap $7.95<br>
-    grilled chicken &amp; diced<br>
-    veggies in a tortilla wrap</td>
-    <td>Fresh Trout $10.95<br>
-    steamed or fresh veggies</td>
+    <td>Cherry Bomb $6.00each slide-$30.00whole pie<br>
+    A shortbread crust flaky pie crust filled with plump,tart cherries</td>
+    <td>The Drunken Nut $8.00 each slide-$38.00 whole pie<br>
+    A shortbread crust cradle a sweet sauce of butter,<br>
+     bourbon,brown sugar and Texas pecans</td>
+     <td>Chocolate Lava $10.00 each slide-$36.00 whole pie<br>
+     A crusty chocolate pie with drizzle of Hershey Chocolate sauce<br>
+        with chopped pieces of kisses chocolate</td>
   </tr>
   <tr>
-    <td>Fruit Surprise $5.95<br>
-    fresh berries, almonds &amp; melon<br>
-    with a lite glaze</td>
+    <td>Fruit Surprise $5.35 each slide-$23.00 whole pie<br>
+    A pie with a mixture of fresh fruits,almonds &amp ; a squirl of whipped cream<br>
+    with a lite of glaze</td>
     <td>Burger Delight $6.95<br>
     burger with spiced cheese<br>
     fries</td>
