--- a/final/products&services.html
+++ b/final/products&services.html
@@ -70,17 +70,13 @@
 <p>Choose from these drinks:</p>
 
 <ul>
-  <li>Tea
-    <ul>
-      <li> Milk (Regular, Strawberry, Chocolate
+   <li>Tea</li>
+   <li> Milk (Regular, Strawberry, Chocolate
       or Coconut)</li>
-      <li>Iced Coffee</li>
-      <li>Fresh Brewed Coffee</li>
-    </ul>
-  </li>
+   <li>Iced Coffee</li>
+    <li>Fresh Brewed Coffee</li>
   <li>French Press Coffee</li>
   <li>Hot chocolate</li>
-  <ul>
   <li>Caramel Frappe</li>
 </ul>          
                
