--- a/final/products&services.html
+++ b/final/products&services.html
@@ -37,17 +37,16 @@
     A shortbread crust cradle a sweet sauce of butter,<br>
      bourbon,brown sugar and Texas pecans</td>
      <td>Chocolate Lava $10.00 each slide-$36.00 whole pie<br>
-     A crusty chocolate pie with drizzle of Hershey Chocolate sauce<br>
-        with chopped pieces of kisses chocolate</td>
+     A crusty chocolate pie with drizzle of Hershey Chocolate sauce with chopped pieces of<br>
+        kisses chocolate</td>
   </tr>
   <tr>
     <td>Fruit Surprise $5.35 each slide-$23.00 whole pie<br>
-    A pie with a mixture of fresh fruits,almonds &amp ; a squirl of whipped cream<br>
-    with a lite of glaze</td>
+    A pie with a mixture of fresh fruits,almonds &amp ; a squirl of <br>
+       whipped cream with a lite of glaze</td>
     <td>Lemon Lover $3.25 each slide-$12.00 whole pie<br>
-    A lemon pie with sweet, tangy custard and tart key limes<br>
-    with a crust made out of graham crackers filled with cream <br>
-    chesse</td>
+    A lemon pie with sweet, tangy custard and tart key <br>
+       limes with a crust made out of graham crackers filled with cream chesse</td>
     <td>Pumpkin Pie $7.99 each slide-$13.99 whole pie<br>
      Smashed Pumpkin</td>
   </tr>
