--- a/final/pie.html
+++ b/final/pie.html
@@ -8,7 +8,7 @@
      </head>
    <body>
       <header>
-        <img src="pieshoplogo.jpg" alt="Emporium Pie" height="100" width="760">
+        <img src="pieshop.logo" alt="Emporium Pie" height="100" width="760">
       </header>
       
       <nav>
@@ -28,7 +28,7 @@
             </article>
          </section>
          <aside class="right">
-             <img src="pielogo.jpg" alt="Emporium Pie" height="300" width="300">
+             <img src="pielogo2.jpg" alt="Emporium Pie" height="300" width="300">
          </aside>
          
          <p>We are located on the northwest close to the Deep Ellum, offering a panoramic view of Downtown Dallas.</p> 
