--- a/final/pie.html
+++ b/final/pie.html
@@ -8,7 +8,7 @@
      </head>
    <body>
       <header>
-        <img src="pieshop.logo" alt="Emporium Pie" height="100" width="760">
+        <img src="pieshop.logo.jpg" alt="Emporium Pie" height="100" width="760">
       </header>
       
       <nav>
