--- a/final/pie.html
+++ b/final/pie.html
@@ -3,7 +3,7 @@
    <head>
       <title>Emporium Pies - Home</title>
    
-      <link rel="stylesheet" type="text/css" href="styles/arbor.css" />
+      <link rel="stylesheet" type="text/css" href="styles/pie.css" />
    
      </head>
    <body>
