--- a/final/products&services.html
+++ b/final/products&services.html
@@ -86,9 +86,9 @@
       </main>
       <footer id="footer">
          <hr>
-         <p><em>5555 White Rock Lake Drive<br>
-            Dallas TX 75238<br>
-            214 224 4245</em></p>
+         <p><em>2708 Main ST #110<br>
+            Dallas TX 75226<br>
+            972 982 2757</em></p>
          
          <p><strong>&copy; Emely Guerrero</strong>, </p>
          <p>Check out the rest of my <a href="http://EmelyG.github.io">site</a>!</p>
