--- a/final/contactus.html
+++ b/final/contactus.html
@@ -29,10 +29,10 @@
            
            <ul>
              <li>Sandy Harrison</li>
-             <li>She was bored in Spain but raised in Dallas</li>
+             <li>She was bored in Spain but raised in Dallas.</li>
              <li>She found out she had a passion for baking pies<br> 
-                when she was 13yrs old</li>
-             <li>Personal Phone Number is 972 982 2656</li>
+                when she was 13yrs old.</li>
+             <li>Personal Phone Number is 972 982 2656.</li>
            </ul>
             
             </article>
