--- a/final/products&services.html
+++ b/final/products&services.html
@@ -12,7 +12,7 @@
       </header>
       <nav>
         <ul>
-           <li><a href="/final/arbor.html">Home</a></li>
+           <li><a href="/final/pie.html">Home</a></li>
            <li><a href="/final/product and services.html">Product and Services</a></li>
            <li><a href="/final/contactus.html">Contact Us</a></li>
         </ul>
