--- a/final/products&services.html
+++ b/final/products&services.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
            <li><a href="/final/pie.html">Home</a></li>
-           <li><a href="/final/product and services.html">Product and Services</a></li>
+           <li><a href="/final/product&services.html">Product and Services</a></li>
            <li><a href="/final/contactus.html">Contact Us</a></li>
         </ul>
       </nav>
