--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
    <li><a href = "/week03/assignment02.html">Assignment 02</a></li>
    <li><a href = "/week04/assignment03.html">Assignment 03</a></li>
    <li><a href = "/arbor/arbor.html">Arbor Cafe</a></li>
+   <li><a href = "/final/pie.html">Emporium Pies</a></li>
   </ol>
   
  <footer>
