--- a/final/pie.html
+++ b/final/pie.html
@@ -26,7 +26,7 @@
               <p>We hope you enjoy a quick bit of leisurely stay with us.</p>
                
             <aside class="left">
-               <img src="pie.jgp" alt="Emporium Pie" height="300" width="300">
+               <img src="pie.jpg" alt="Emporium Pie" height="300" width="300">
                </aside>
                
             </article>
