--- a/final/contactus.html
+++ b/final/contactus.html
@@ -44,7 +44,7 @@
          <p>We are located on the northwest close to the Deep Ellum, offering a panoramic view of Downtown Dallas.</p> 
          <p>Call ahead - we welcome reservations!</p>
          
-         <aside class="right">
+         <aside class="center">
              <img src="map.jpg" alt="Emporium Pie" height="210" width="300">
          </aside>
         
