--- a/final/pie.html
+++ b/final/pie.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <body style="background-color:powderblue;">
+</html>
+<head>
       <title>Emporium Pies - Home</title>
-   
       <link rel="stylesheet" type="text/css" href="styles/pie.css" />
    
      </head>
