--- a/final/pie.html
+++ b/final/pie.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <body style="background-color:ghostwhite;">
+   <body style="background-color:seashell;">
 </html>
 <head>
       <title>Emporium Pies - Home</title>
