--- a/final/contactus.html
+++ b/final/contactus.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+   <body style="background-color: seashell;">
+</html>
    <head>
       <title>Emporium Pies - Home</title>
    
