--- a/final/contactus.html
+++ b/final/contactus.html
@@ -44,7 +44,7 @@
          </aside>
          
          <p>We are located on the northwest close to the Deep Ellum, offering a panoramic view of Downtown Dallas.</p> 
-         <p>Call ahead - we welcome reservations!</p>
+         <p>Come visit us or call ahead - we welcome reservations!</p>
          
          <aside class="left">
              <img src="map.jpg" alt="Emporium Pie" height="500" width="550">
