--- a/final/contactus.html
+++ b/final/contactus.html
@@ -27,7 +27,7 @@
                <p>Welcome to the home of <strong><em>emporium pie baking!</em></strong></p>
               <p>We hope you have a great experience in our shop.</p>
               
-                   <h1>Owner Infromation</h1>
+                   <h1>Owner Information</h1>
            
            <ul>
              <li>Sandy Harrison</li>
